obk-mtel-document-trunk/k8s/uat_backup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: generic-alb
  name: ob-document
spec:
  ingressClassName: alb
  rules:
    - host: document-uat.glorymtel.xyz
      http:
        paths:
          - path: /
            backend:
              service:
                name: ob-document
                port:
                  number: 80
            pathType: Prefix
